# eggpool

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  bugs.md  config.example.toml  providers.toml  pyproject.toml
.agents/: skills
.github/workflows/: ci.yml  release.yml
architecture/: README.md  phase-0.md  phase-1.md  phase-10-integration-hardening.md  phase-11-quota-lifecycle-correctness.md  phase-12-executable-correctness-pass.md  phase-13-attempt-transaction-hardening.md  phase-14-deployment-blockers-and-operational-hardening.md  phase-15-concurrency-accounting-correctness.md  phase-17-deployment-readiness-corrections.md  phase-18-final-cleanup-before-live-testing.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md  phase-7.md  phase-8.md  phase-9.md
config-examples/: claude-code.env  opencode.jsonc
deploy/: eggpool-logrotate.conf  eggpool.service  env.example  gorouter.service  logrotate.conf
docs/: backup-restore.md  deployment.md  filesystem-layout.md  firewall.md  model-limits.md  network-diagnostics.md  providers.md  proxy.md  raspberry-pi.md  thinking.md  transcoding.md
ops/: eggpool.env.example  eggpool.service  gorouter.env.example  gorouter.service
plans/: 00-roadmap.md  001-outbound-client-lifecycle-cleanup.md  002-bounded-dns-cache.md  003-network-diagnostics-sbc-validation.md  automatic-backups.md  cache_compression_phase_01_cache_token_observability.md  cache_compression_phase_02_canonical_request_segmentation.md  cache_compression_phase_03_transcoder_cache_stability.md  cache_compression_phase_04_observe_mode_compression_accounting.md  cache_compression_phase_05_anthropic_tool_result_closure.md  cache_compression_phase_05_corrective_pass.md  cache_compression_phase_05_safe_suffix_compression.md  cache_preserving_deterministic_compression_roadmap.md  catalog-nondestructive-refresh-corrective-pass.md  configsetup-agent-expansion-closure.md  configsetup-agent-expansion-final-fix.md  configsetup-agent-expansion.md  context.md  daemon-and-runtime.md  dns-cache-corrective-pass.md  eggpoolfix.md  fix_granian_single_process.md  grouped-timeseries-dashboard.md  install-deploy-simplification.md  lightweight-cli-watchdog.md  memory.md  metrics-core-api-plan.md  metrics-dashboard-plan.md  metrics-runtime-ops-plan.md  minimax-anthropic-model-listing.md  minimax-generalcompute-provider-fix.md  minimax-url-auth-correction.md  model-info-closure-provider-merge-and-refresh-normalization.md  model-info-corrective-catalog-models-and-cards.md  model-info-phase-1-foundation.md  model-info-phase-2-lifecycle-scheduler.md  model-info-phase-3-openrouter-source.md  model-info-phase-4-api-dashboard.md  model-info-phase-5-benchmarks-model-cards.md  model-info-roadmap.md  (+47 more)
scripts/: __init__.py  check_database.py  install.sh  install_prompt.py  smoke_test.py  validate_routing.py  verify_upstream_auth.py
src/eggpool/: __init__.py  __main__.py  app.py  auth.py  cli.py  cli_full.py  config.py  config_utils.py  constants.py  cost_recompute.py  deploy_user.py  errors.py  fastcli.py  onboard.py  runtime.py  runtime_dispatch.py  runtime_metrics.py  runtime_paths.py  toml_edit.py  update_checker.py
src/go_aggregator/: __init__.py  __main__.py  app.py  auth.py  cli.py  constants.py  errors.py  logging.py
tests/: conftest.py  test_dashboard_formatting.py
tests/contract/: test_proxy_contract.py  test_transcoder_contract.py
tests/integration/: _openrouter_real_fixture.json  test_api_key_e2e.py  test_application_startup.py  test_catalog_cache_reload.py  test_catalog_persistence_reconcile.py  test_catalog_unresolved_models.py  test_cli_deploy.py  test_cli_models_refresh.py  test_cli_provider_aware.py  test_coordinator_disconnect.py  test_coordinator_lifecycle.py  test_dashboard_routes.py  (+53 more)
(+426 files in other folders)
