[project]
name = "eggpool"
version = "0.1.0"
description = "A lightweight proxy that aggregates multiple LLM provider accounts behind one OpenAI-compatible endpoint"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "David Bowman" }]
dependencies = [
    "fastapi",
    "granian",
    "httpx",
    "aiosqlite",
    "pydantic>=2.0",
    "jinja2",
    "click",
    "pproxy>=2.7.9",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pyright",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "respx",
    "coverage[toml]",
    "pre-commit",
]

[project.scripts]
eggpool = "eggpool.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eggpool"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
include = ["src", "scripts"]
exclude = ["tests"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
