[project]
name = "eggpool"
version = "0.1.3"
description = "A lightweight proxy that aggregates multiple LLM provider accounts behind one OpenAI-compatible endpoint"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "David Bowman", email = "dbowman91@proton.me" }]
keywords = [
    "llm",
    "proxy",
    "openai",
    "anthropic",
    "aggregation",
    "router",
    "multi-account",
    "opencode",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Framework :: FastAPI",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]
dependencies = [
    "fastapi",
    "granian",
    "httpx",
    "aiosqlite",
    "pydantic>=2.0",
    "click",
    "pproxy>=2.7.9",
]

[project.urls]
Homepage = "https://github.com/eggstack/eggpool"
Repository = "https://github.com/eggstack/eggpool"
Issues = "https://github.com/eggstack/eggpool/issues"
Documentation = "https://github.com/eggstack/eggpool/tree/main/docs"
Changelog = "https://github.com/eggstack/eggpool/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "ruff",
    "pyright",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "respx",
    "coverage[toml]",
    "pre-commit",
]

[project.scripts]
eggpool = "eggpool.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eggpool"]

[tool.hatch.build.targets.sdist]
exclude = [
    ".opencode",
    ".agents",
    ".venv",
    ".pytest_cache",
    ".ruff_cache",
    ".pyright",
    "dist",
    "build",
    "*.egg-info",
    "*.sqlite3",
    "*.sqlite3-wal",
    "*.sqlite3-shm",
    "coverage.xml",
    ".coverage",
    ".coverage.*",
    "htmlcov",
    "*.log",
    "bugs.md",
    "/var",
    "plans",
    "tests",
]
exclude-globs = [
    "**/__pycache__",
    "**/.DS_Store",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
include = ["src", "scripts"]
exclude = ["tests"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
